Name:       deadtest
Version:    0.0
Author:     Scott West
Maintainer: scott.west@inf.ethz.ch
Build-Type: Simple
Cabal-Version: >=1.2

Executable deadtest
  Main-is: Deadlock/Test.hs
  Build-Depends: 
    base >= 4,
    filepath,
    directory,
    parsec,
    process,
    language-dot,
    graphviz,
    fgl,
    bytestring,
    base,
    containers, 
    pretty,
    mtl
  ghc-options: -Wall


Executable deaddemo
  Main-is: Demo/Main.hs
  Build-Depends: 
    parsec, 
    filepath,
    directory,
    bytestring,
    base, 
    array,
    containers, 
    pretty,
    mtl,
    cmdargs,
    gtk >= 0.12.5.7,
    gtksourceview2,
    glade,
    uri,
    fgl,
    graphviz
  ghc-options: -Wall
